aks/manifests/dev/backend/identityserver-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-deployment
  labels:
    app: identityserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityserver
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
      - name: identityserver
        image: microservicesdemoregistry.azurecr.io/identityserver:$(tag)
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: identityserver-signing-cert
          mountPath: /app/certs
          readOnly: true
      volumes:
      - name: identityserver-signing-cert
        secret:
          secretName: identityserver-secrets
          items:
          - key: identityserver-signing-prod.pfx
            path: identityserver-signing-prod.pfx
---
apiVersion: v1
kind: Service
metadata:
  name: identityserver-service
  labels:
    app: identityserver
spec:
  selector:
    app: identityserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
